# secure-face-matching

./: .gitignore  .gitmodules  LICENSE  README.md
data/: gendata.py
face-matching/authentication/: CMakeLists.txt  Makefile  authentication-bfv-1-to-1.cpp  authentication-bfv-1-to-n.cpp  authentication-ckks-1-to-1.cpp  authentication-ckks-1-to-n.cpp  authentication.cpp
face-matching/enrollment/: CMakeLists.txt  Makefile  enrollment-bfv-1-to-1.cpp  enrollment-bfv-1-to-n.cpp  enrollment-ckks-1-to-1.cpp  enrollment-ckks-1-to-n.cpp  enrollment.cpp
include/: utils.h
